# cs-risk-agent

./: .env.example  .gitignore  Makefile  PLAN.md  README.md  start_demo.ps1
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/demo_data/reports/: report_81ecf1dc-97d4-4394-b3a3-9f0b7c1bced4.pptx
backend/src/cs_risk_agent/: __init__.py  config.py  demo_loader.py  main.py
backend/src/cs_risk_agent/ai/: circuit_breaker.py  cost_tracker.py  model_tier.py  provider.py  registry.py  router.py
backend/src/cs_risk_agent/ai/agents/: anomaly_probe.py  cross_ref_probe.py  orchestrator.py  ratio_probe.py  relationship_probe.py  trend_probe.py
backend/src/cs_risk_agent/ai/providers/: aws_bedrock.py  azure_foundry.py  gcp_vertex.py  ollama_local.py  vllm_local.py
backend/src/cs_risk_agent/analysis/: benford.py  discretionary_accruals.py  fraud_prediction.py  risk_scorer.py  rule_engine.py  task_manager.py
backend/src/cs_risk_agent/api/: deps.py  middleware.py
backend/src/cs_risk_agent/api/v1/: admin.py  ai_insights.py  analysis.py  auth.py  companies.py  financials.py  health.py  reports.py  risk_scores.py  router.py
backend/src/cs_risk_agent/core/: exceptions.py  security.py
backend/src/cs_risk_agent/data/: database.py  models.py  provider.py  repository.py  schemas.py
backend/src/cs_risk_agent/etl/: __init__.py  edinet_client.py  excel_loader.py  pipeline.py  xbrl_parser.py
backend/src/cs_risk_agent/observability/: audit.py  logging.py  metrics.py  tracing.py
backend/src/cs_risk_agent/reports/: __init__.py  pdf_generator.py  pptx_generator.py
backend/src/cs_risk_agent/scripts/: seed_db.py
backend/tests/: conftest.py
backend/tests/e2e/: test_business_scenarios.py
backend/tests/integration/: test_all_endpoints.py  test_api_endpoints.py  test_financials_api.py  test_provider_failover.py  test_reports_api.py
backend/tests/unit/: test_ai_agents.py  test_ai_ollama_integration.py  test_ai_provider.py  test_ai_providers_full_coverage.py  test_ai_registry_tier_coverage.py  test_ai_router_coverage.py  test_analysis_task_manager.py  test_api_middleware.py  test_api_v1_coverage.py  test_audit.py  test_auth_rbac.py  test_benford.py  test_circuit_breaker.py  test_config_coverage.py  test_core.py  test_core_coverage.py  test_cost_tracker.py  test_data_layer_coverage.py  test_data_models.py  test_data_provider.py  test_db_provider.py  test_demo_loader.py  test_deps_coverage.py  test_discretionary_accruals.py  test_etl.py  test_etl_edinet.py  test_etl_modules_coverage.py  test_fraud_prediction.py  test_fraud_trend_coverage.py  test_main_coverage.py  test_main_extra_coverage.py  test_middleware_coverage.py  test_model_router.py  test_observability.py  test_observability_coverage.py  test_provider_coverage.py  test_reports.py  test_risk_scorer.py  test_rule_engine.py  test_schemas.py  (+1 more)
demo_data/: alerts.json  companies.json  financial_statements.csv  (+4 more)
(+78 files in other folders)
